tests/saved_state_init_recheck/saved_state_init_recheck.exp
There should be no errors when the saved state is generated
No errors!

Full init with saved state does recheck & sees new error
Error ------------------------------------------------------------------------------------------------------- foo.js:4:2

Cannot cast `x` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   foo.js:4:2
   4| (x: string);
       ^

References:
   bar.js:3:18
   3| export const x = 123
                       ^^^ [1]
   foo.js:4:5
   4| (x: string);
          ^^^^^^ [2]



Found 1 error

Lazy init with saved state does NOT recheck & sees 0 errors...
No errors!

The Flow server is currently in lazy mode and is only checking 0/2 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes

...but focusing the file exposes the error
Error ------------------------------------------------------------------------------------------------------- foo.js:4:2

Cannot cast `x` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   foo.js:4:2
   4| (x: string);
       ^

References:
   bar.js:3:18
   3| export const x = 123
                       ^^^ [1]
   foo.js:4:5
   4| (x: string);
          ^^^^^^ [2]



Found 1 error

The Flow server is currently in lazy mode and is only checking 2/2 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes

--saved-state-force-recheck does recheck & sees new error
Error ------------------------------------------------------------------------------------------------------- foo.js:4:2

Cannot cast `x` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   foo.js:4:2
   4| (x: string);
       ^

References:
   bar.js:3:18
   3| export const x = 123
                       ^^^ [1]
   foo.js:4:5
   4| (x: string);
          ^^^^^^ [2]



Found 1 error

The Flow server is currently in lazy mode and is only checking 2/2 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes

A file incompatible with rechecks changed, so no saved state loading

...so we need to fallback to non-saved-state
Error ------------------------------------------------------------------------------------------------------- foo.js:4:2

Cannot cast `x` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   foo.js:4:2
   4| (x: string);
       ^

References:
   bar.js:3:18
   3| export const x = 123
                       ^^^ [1]
   foo.js:4:5
   4| (x: string);
          ^^^^^^ [2]



Found 1 error

Fallbacks work for lazy mode too
No errors!

The Flow server is currently in lazy mode and is only checking 0/2 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes
